fix: shift login

--- a/web-ui/src/index.css
+++ b/web-ui/src/index.css
@@ -12,7 +12,7 @@ input, button{
   outline: none;
 }
 
-.App{
+.Login{
   height: 100vh;
   display: flex;
   flex-direction: column;
